--- a/dohater_site/static/css/home.css
+++ b/dohater_site/static/css/home.css
@@ -1,5 +1,6 @@
 .wrapper{
     width: 100%;
+    min-height: 70vh;
 }
 
 .inner{
@@ -109,7 +110,20 @@
     margin-right: 20px;
 }
 
+.test_name{
+    overflow-wrap: anywhere;
+}
+
 .test_name span.highlight{
+    color: var(--train_red_color);
+}
+
+.test_name a{
+    text-decoration: none;
+    color: var(--white_color);
+}
+
+.test_name a:hover{
     color: var(--train_red_color);
 }
 
