--- a/dohater_site/templates/cdo_ska/index.html
+++ b/dohater_site/templates/cdo_ska/index.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load paginator_tags %}
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,7 +35,8 @@
             </div>
         </div>
         <div class="container bg-red fat">
-            <form class="nav-wrapper">
+            {% url 'home' request.GET.urlencode as home_url %}
+            <form action="{{ home_url }}" class="nav-wrapper">
                 <svg id="burger" width="49" height="49" viewBox="0 0 49 49" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g id="hamburger">
                     <g id="Group">
