--- a/dohater_site/templates/cdo_ska/index.html
+++ b/dohater_site/templates/cdo_ska/index.html
@@ -35,9 +35,9 @@
             </div>
         </div>
         <div class="container bg-red fat">
-            {% url 'home' request.GET.urlencode as home_url %}
-            <form action="{{ home_url }}" class="nav-wrapper">
-                <svg id="burger" width="49" height="49" viewBox="0 0 49 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <form action="{% url 'home' %}" class="nav-wrapper">
+                {% block icon %}
+                <svg class="icon resp-icon" id="burger" width="49" height="49" viewBox="0 0 49 49" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g id="hamburger">
                     <g id="Group">
                     <path id="Path 2" d="M12.5996 14.5H36.5996" stroke="white" stroke-width="4" stroke-linecap="round"/>
@@ -46,6 +46,7 @@
                     </g>
                     </g>
                 </svg>
+                {% endblock %}
                 <img id="logo" src="{% static 'images/logo.png' %}" alt="" class="logo">
                 {% csrf_token %}
                 <input id="" class="headerfont search" placeholder="Найти вопрос, ответ, тему или раздел" type="text" name="query">
